--- a/tab选项卡/index.html
+++ b/tab选项卡/index.html
@@ -2,14 +2,21 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="（jQuery的文件路径）"></script>
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js">
+    </script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js">
+    </script>
     <meta charset="utf-8">
     <title>tab选项</title>
     <style>
         * {
             margin: 0;
             padding: 0;
+        }
+
+        ul,
+        li {
+            list-style: none;
         }
 
         body {
@@ -19,43 +26,98 @@
             font-family: "微软雅黑";
         }
 
-        ul,
-        li {
-            list-style: none;
+        .tab-view {
+            float: left;
+            margin-right: 20px;
+        }
+
+        .tab-view p {
+            color: #999;
+            margin-bottom: 20px;
         }
     </style>
 
 
     <link rel="stylesheet" href="tab.css">
 
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="tab.js"></script>
+    <script src="jquery.js"></script>
+    <script src="tab.js"></script>
 </head>
 
 <body>
-    <div class="tab">
-        <ul class="tab-nav">
-            <li class="actived"><a href="#">新闻</a></li>
-            <li><a href="#">娱乐</a></li>
-            <li><a href="#">电影</a></li>
-            <li><a href="#">科技</a></li>
-        </ul>
-        <div class="content-wrap">
-            <div class="content-item current">1</div>
-            <div class="content-item">2</div>
-            <div class="content-item">3</div>
-            <div class="content-item">4</div>
+    <div class="tab-view">
+        <p>1.没配置任何参数</p>
+        <div class="js-tab">
+            <ul class="tab-nav">
+                <li class="actived"><a href="#">新闻</a></li>
+                <li><a href="#">娱乐</a></li>
+                <li><a href="#">电影</a></li>
+                <li><a href="#">科技</a></li>
+            </ul>
+            <div class="content-wrap">
+                <div class="content-item current">1</div>
+                <div class="content-item">2</div>
+                <div class="content-item">3</div>
+                <div class="content-item">4</div>
+            </div>
         </div>
     </div>
+
+    <div class="tab-view">
+        <p>2.触发事件 click，切换效果为淡入淡出，3秒自动切换</p>
+        <div class="js-tab" data-config='{
+                "triggerType":"click",
+                "effect":"fade",
+                "invoke":0,
+                "auto":3000
+            }'>
+            <ul class="tab-nav">
+                <li class="actived"><a href="#">新闻</a></li>
+                <li><a href="#">娱乐</a></li>
+                <li><a href="#">电影</a></li>
+                <li><a href="#">科技</a></li>
+            </ul>
+            <div class="content-wrap">
+                <div class="content-item current">1</div>
+                <div class="content-item">2</div>
+                <div class="content-item">3</div>
+                <div class="content-item">4</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tab-view">
+        <p>3.默认显示第三个 tab 内容</p>
+        <div class="js-tab" data-config='{
+                "invoke":3
+            }'>
+            <ul class="tab-nav">
+                <li class="actived"><a href="#">新闻</a></li>
+                <li><a href="#">娱乐</a></li>
+                <li><a href="#">电影</a></li>
+                <li><a href="#">科技</a></li>
+            </ul>
+            <div class="content-wrap">
+                <div class="content-item current">1</div>
+                <div class="content-item">2</div>
+                <div class="content-item">3</div>
+                <div class="content-item">4</div>
+            </div>
+        </div>
+    </div>
+
     <script>
         $(function() {
             //TAB
-            var tab1 = new Tab({
+            //                        var tab1 = new Tab($(".js-tab").eq(0));
+            //                        var tab2 = new Tab($(".js-tab").eq(1));
+            //                        var tab3 = new Tab($(".js-tab").eq(2));
 
+            //            Tab.init($(".js-tab"));
 
-
-            });
-        })
+            //jq方法
+            $(".js-tab").tab();
+        });
     </script>
 </body>
 
