--- a/Nplus-shop/index.html
+++ b/Nplus-shop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="nplus-shop.css">
+    <link rel="stylesheet" href="css/nplus-shop.css">
     <style>
         .iframe_a {
             background-color: 0;
