--- a/Nplus-shop/nplus-ip.html
+++ b/Nplus-shop/nplus-ip.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ip</title>
-    <link rel="stylesheet" href="nplus-shop.css">
+    <link rel="stylesheet" href="css/nplus-shop.css">
     <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
 </head>
 
