新增视频增加水印

--- a/Nplus-shop/nplus-ip-home.html
+++ b/Nplus-shop/nplus-ip-home.html
@@ -6,13 +6,14 @@
     <title>ipHome</title>
     <link rel="stylesheet" href="css/nplus-shop.css">
     <style>
-        .top{
+        .top {
             width: 100%;
             height: 333px;
             background: #ccc;
             margin: 0 auto;
         }
-        .main{
+
+        .main {
             position: absolute;
             width: 100%;
             height: calc(100% - 333px);
@@ -81,13 +82,13 @@
         }
 
         /*a:after {*/
-            /*content: "";*/
-            /*border-top: 18px solid #fff;*/
-            /*border-left: 30px solid transparent;*/
-            /*border-right: 30px solid transparent;*/
-            /*bottom: -116px;*/
-            /*left: calc(25% - 30px);*/
-            /*position: absolute;*/
+        /*content: "";*/
+        /*border-top: 18px solid #fff;*/
+        /*border-left: 30px solid transparent;*/
+        /*border-right: 30px solid transparent;*/
+        /*bottom: -116px;*/
+        /*left: calc(25% - 30px);*/
+        /*position: absolute;*/
         /*}*/
 
         .line {
@@ -114,20 +115,21 @@
 </head>
 
 <body>
-    <iframe id="iframe_b" class="iframe_b" name="iframe_b"></iframe>
-    <ul class="back">
+<iframe id="iframe_b" class="iframe_b" name="iframe_b"></iframe>
+<ul class="back">
 
-        <li>
-            <a id="wx" href="nplus-emoticons.html" target="iframe_b" onclick='tabClick("wx")'><img src='image/icon_weixin_nor.png' />微信表情包</a>
-        </li>
+    <li>
+        <a id="wx" href="nplus-emoticons.html" target="iframe_b" onclick='tabClick("wx")'><img
+                src='image/icon_weixin_nor.png'/>微信表情包</a>
+    </li>
 
-        <li class="line"></li>
+    <li class="line"></li>
 
-        <li>
-            <a id="ip" href="nplus-ip.html" target="iframe_b" onclick='tabClick("ip")'><img src='image/icon_ip_nor.png' />IP形象设定</a>
-        </li>
+    <li>
+        <a id="ip" href="nplus-ip.html" target="iframe_b" onclick='tabClick("ip")'><img src='image/icon_ip_nor.png'/>IP形象设定</a>
+    </li>
 
-    </ul>
+</ul>
 </body>
 
 <script>
