--- a/Nplus-shop/game.html
+++ b/Nplus-shop/game.html
@@ -19,20 +19,73 @@
         };
     </script>
 </head>
-<body>
-<div class="body">
-    <div class="main"></div>
+
+<body style="background-color: #F7CC45">
+<div class="bodyView">
+    <div class="main" style="background-color: #F7CC45">
+        <ul>
+            <li class="game-item-list"
+                style="width: 6.68rem; height: 8.24rem; background: url(&quot;image/game0.png&quot;) 0% 0% / cover;">
+                <a>
+                    <h1 class="game-title">nightmare<br/>escape</h1>
+                    <h2 class="game-content">逃离梦魇</h2>
+                </a>
+                <a class="bottom">
+                    <h1 class="game-price">FREE</h1>
+                    <h2 class="game-type">冒险游戏</h2>
+                </a>
+                <button class="game-open">立即体验</button>
+            </li>
+            <li class="game-item-list"
+                style="width: 6.68rem; height: 8.24rem; background: url(&quot;image/game0.png&quot;) 0% 0% / cover;">
+                <a>
+                    <h1 class="game-title">nightmare<br/>escape</h1>
+                    <h2 class="game-content">逃离梦魇</h2>
+                </a>
+                <a class="bottom">
+                    <h1 class="game-price">FREE</h1>
+                    <h2 class="game-type">冒险游戏</h2>
+                </a>
+                <button class="game-open">立即体验</button>
+            </li>
+            <li class="game-item-list"
+                style="width: 6.68rem; height: 8.24rem; background: url(&quot;image/game0.png&quot;) 0% 0% / cover;">
+                <a>
+                    <h1 class="game-title">nightmare<br/>escape</h1>
+                    <h2 class="game-content">逃离梦魇</h2>
+                </a>
+                <a class="bottom">
+                    <h1 class="game-price">FREE</h1>
+                    <h2 class="game-type">冒险游戏</h2>
+                </a>
+                <button class="game-open">立即体验</button>
+            </li>
+            <li class="game-item-list"
+                style="width: 6.68rem; height: 8.24rem; background: url(&quot;image/game0.png&quot;) 0% 0% / cover;">
+                <a>
+                    <h1 class="game-title">nightmare<br/>escape</h1>
+                    <h2 class="game-content">逃离梦魇</h2>
+                </a>
+                <a class="bottom">
+                    <h1 class="game-price">FREE</h1>
+                    <h2 class="game-type">冒险游戏</h2>
+                </a>
+                <button class="game-open">立即体验</button>
+            </li>
+        </ul>
+    </div>
     <div class="footer">
         <ul>
-            <li><a class="game" href="nplus-game.html" target="iframe_a" onclick="homeClick()">GAME</a></li>
-            <li class="line"></li>
-            <li><a href="">WVI</a></li>
-            <li class="line"></li>
-            <li><a class="ip" href="nplus-ip-home.html" target="iframe_a" onclick="ipClick()">IP</a></li>
-            <li class="line"></li>
-            <li><a href="">ABOUT</a></li>
+            <li class="barItem"><a class="game" href="game.html">GAME</a></li>
+            <!--<li class="line"></li>-->
+            <li class="barItem"><a href="">WVI</a></li>
+            <!--<li class="line"></li>-->
+            <li class="barItem"><a class="ip" href="IP.html">IP</a></li>
+            <!--<li class="line"></li>-->
+            <li class="barItem"><a href="">ABOUT</a></li>
         </ul>
     </div>
 </div>
 </body>
+
 </html>
