--- a/tab选项卡/index.html
+++ b/tab选项卡/index.html
@@ -40,7 +40,7 @@
 
     <link rel="stylesheet" href="tab.css">
 
-    <script src="jquery.js"></script>
+    <!--<script src="jquery.js"></script>-->
     <script src="tab.js"></script>
 </head>
 <body>
@@ -101,15 +101,6 @@
                 <div class="content-item">4</div>
             </div>
         </div>
-    </div>
-
-    <div class="footer">
-        <ul>
-            <li class="active"><a href="index.html">首页</a></li>
-            <li><a href="long-order.html">长期订购</a></li>
-            <li><a href="javascript:void(0);" class="menu-cart">购物车<span id="cart-num">0</span></a></li>
-            <li><a href="my.html">我的</a></li>
-        </ul>
     </div>
     <script>
         $(function() {
